Bug 35872 - gnome session crashes while removing the system user
Summary: gnome session crashes while removing the system user
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium critical
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-01 07:58 UTC by Ionut Biru
Modified: 2011-04-15 09:26 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
gdm slave log (41.54 KB, text/plain)
2011-04-01 07:59 UTC, Ionut Biru
Details
when adding an user (6.87 KB, text/plain)
2011-04-15 08:58 UTC, Ionut Biru
Details
at userdel (6.87 KB, text/plain)
2011-04-15 08:58 UTC, Ionut Biru
Details

Description Ionut Biru 2011-04-01 07:58:48 UTC
accountsservice 0.6.6

gdm[12099]: ******************* START **********************************
gdm[12099]: [Thread debugging using libthread_db enabled]
gdm[12099]: [New Thread 0xb71bbb70 (LWP 11717)]
gdm[12099]: 0xb77cd424 in __kernel_vsyscall ()
gdm[12099]: #0  0xb77cd424 in __kernel_vsyscall ()
gdm[12099]: #1  0xb77377bb in waitpid () from /lib/libpthread.so.0
gdm[12099]: #2  0x08054c21 in ?? ()
gdm[12099]: #3  0x08054d09 in ?? ()
gdm[12099]: #4  <signal handler called>
gdm[12099]: #5  0xb77cd424 in __kernel_vsyscall ()
gdm[12099]: #6  0xb74c6bbf in raise () from /lib/libc.so.6
gdm[12099]: #7  0xb74c8545 in abort () from /lib/libc.so.6
gdm[12099]: #8  0xb7658a67 in g_logv () from /usr/lib/libglib-2.0.so.0
gdm[12099]: #9  0xb7658aa2 in g_log () from /usr/lib/libglib-2.0.so.0
gdm[12099]: #10 0xb7658c9d in g_return_if_fail_warning () from /usr/lib/libglib-2.0.so.0
gdm[12099]: #11 0xb76f11bd in g_object_ref () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: #12 0xb7606cf4 in remove_user (manager=0x981a018, user=0x0) at act-user-manager.c:728
gdm[12099]: #13 0xb7607121 in on_user_removed_in_accounts_service (proxy=0x9818960, object_path=0x982bfb0 "/org/freedesktop/Accounts/User0", user_data=0x981a018) at act-user-manager.c:844
gdm[12099]: #14 0xb770c878 in g_cclosure_marshal_VOID__BOXED () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: #15 0xb77912d4 in ?? () from /usr/lib/libdbus-glib-1.so.2
gdm[12099]: #16 0xb76efb02 in g_closure_invoke () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: #17 0xb7702a20 in ?? () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: #18 0xb770b486 in g_signal_emit_valist () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: #19 0xb770b632 in g_signal_emit () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: #20 0xb7791f0d in ?? () from /usr/lib/libdbus-glib-1.so.2
gdm[12099]: #21 0xb7753cd3 in dbus_connection_dispatch () from /usr/lib/libdbus-1.so.3
gdm[12099]: #22 0xb7789fcd in ?? () from /usr/lib/libdbus-glib-1.so.2
gdm[12099]: #23 0xb764f712 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
gdm[12099]: #24 0xb764fef0 in ?? () from /usr/lib/libglib-2.0.so.0
gdm[12099]: #25 0xb76505b3 in g_main_loop_run () from /usr/lib/libglib-2.0.so.0
gdm[12099]: #26 0x0804bdae in ?? ()
gdm[12099]: #27 0xb74b2103 in __libc_start_main () from /lib/libc.so.6
gdm[12099]: #28 0x0804b951 in ?? ()
gdm[12099]: 
gdm[12099]: Thread 2 (Thread 0xb71bbb70 (LWP 11717)):
gdm[12099]: #0  0xb77cd424 in __kernel_vsyscall ()
gdm[12099]: No symbol table info available.
gdm[12099]: #1  0xb773681b in read () from /lib/libpthread.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #2  0xb765160d in ?? () from /usr/lib/libglib-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: .0
gdm[12099]: No symbol table info available.
gdm[12099]: #4  0xb772fc77 in start_thread () from /lib/libpthread.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #5  0xb7568c6e in clone () from /lib/libc.so.6
gdm[12099]: No symbol table info available.
gdm[12099]: 
gdm[12099]: Thread 1 (Thread 0xb74166c0 (LWP 11677)):
gdm[12099]: b77cd424 in __kernel_vsyscall ()
gdm[12099]: No symbol table info available.
gdm[12099]: #1  0xb77377bb in waitpid () from /lib/libpthread.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #2  0x08054c21 in ?? ()
gdm[12099]: No symbol table info available.
gdm[12099]: #3  0x08054d09 in ?? ()
gdm[12099]: ailable.
gdm[12099]: #4  <signal handler called>
gdm[12099]: No symbol table info available.
gdm[12099]: #5  0xb77cd424 in __kernel_vsyscall ()
gdm[12099]: No symbol table info available.
gdm[12099]: #6  0xb74c6bbf in raise () from /lib/libc.so.6
gdm[12099]: No symbol table info available.
gdm[12099]: /libc.so.6
gdm[12099]: No symbol table info available.
gdm[12099]: #8  0xb7658a67 in g_logv () from /usr/lib/libglib-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #9  0xb7658aa2 in g_log () from /usr/lib/libglib-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: ail_warning () from /usr/lib/libglib-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #11 0xb76f11bd in g_object_ref () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: er.c:728
gdm[12099]: No locals.
gdm[12099]: #13 0xb7607121 in on_user_removed_in_accounts_service (proxy=0x9818960, object_path=0x982bfb0 "/org/freedesktop/Accounts/User0", user_data=0x981a018) at act-user-manager.c:844
gdm[12099]:         manager = 0x981a018
gdm[12099]:         user = 0x0
gdm[12099]: 78 in g_cclosure_marshal_VOID__BOXED () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #15 0xb77912d4 in ?? () from /usr/lib/libdbus-glib-1.so.2
gdm[12099]: No symbol table info available.
gdm[12099]: ect-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #17 0xb7702a20 in ?? () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #18 0xb770b486 in g_signal_emit_valist () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: 32 in g_signal_emit () from /usr/lib/libgobject-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #20 0xb7791f0d in ?? () from /usr/lib/libdbus-glib-1.so.2
gdm[12099]: No symbol table info available.
gdm[12099]: #21 0xb7753cd3 in dbus_connection_dispatch () from /usr/lib/libdbus-1.so.3
gdm[12099]: o symbol table info available.
gdm[12099]: #22 0xb7789fcd in ?? () from /usr/lib/libdbus-glib-1.so.2
gdm[12099]: No symbol table info available.
gdm[12099]: #23 0xb764f712 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: om /usr/lib/libglib-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #25 0xb76505b3 in g_main_loop_run () from /usr/lib/libglib-2.0.so.0
gdm[12099]: No symbol table info available.
gdm[12099]: #26 0x0804bdae in ?? ()
gdm[12099]: No symbol table info available.
gdm[12099]:  from /lib/libc.so.6
gdm[12099]: No symbol table info available.
gdm[12099]: #28 0x0804b951 in ?? ()
gdm[12099]: No symbol table info available.
gdm[12099]: A debugging session is active.
gdm[12099]: 
gdm[12099]: 	Inferior 1 [process 11677] will be detached.
gdm[12099]: 
gdm[12099]: Quit anyway? (y or n) [answered Y; input not from terminal]
Comment 1 Ionut Biru 2011-04-01 07:59:55 UTC
Created attachment 45134 [details]
gdm slave log
Comment 2 Matthias Clasen 2011-04-03 20:53:28 UTC
What is the 'system user' and how do you remove it ?
Comment 3 Ionut Biru 2011-04-03 21:29:13 UTC
userdel wonder

is a regular user
Comment 4 Ionut Biru 2011-04-15 08:58:02 UTC
Created attachment 45673 [details]
when adding an user
Comment 5 Ionut Biru 2011-04-15 08:58:30 UTC
Created attachment 45674 [details]
at userdel
Comment 6 Ionut Biru 2011-04-15 08:59:28 UTC
useradd -c 'usbmux user' -u 140 -g usbmux -d / -s /sbin/nologin usbmux

for some reason it passed a NULL username. Maybe it needs a check?


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.