Don't crash when removing nameless users

Every person had in the beginning one only proper name, except the savages
of Mount Atlas in Barbary, which were reported to be both nameless and
dreamless.

https://bugs.freedesktop.org/show_bug.cgi?id=35872